--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,7 +56,6 @@ dependencies {
     }
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.squareup.retrofit2:converter-gson:2.6.2'
-    implementation 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.4.1'
     implementation 'com.squareup.okhttp3:okhttp:3.12.1'
 
@@ -69,7 +68,12 @@ dependencies {
     //image compressor
     implementation 'com.iceteck.silicompressorr:silicompressor:2.2.4'
 
+    implementation 'org.ocpsoft.prettytime:prettytime:4.0.1.Final'
+
+    implementation 'com.labo.kaji:fragmentanimations:0.1.1'
 }
+
+
 
 apply plugin: 'com.google.gms.google-services'
 apply plugin: 'com.android.application'
