--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
-        android:name="com.thesaugat.instafeed.InstaFeedApplication"
+        android:name=".InstaFeedApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -18,6 +18,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ClassTwo">
+        <activity android:name=".ui.home.story.StoryActivity"></activity>
         <activity
             android:name=".ui.home.AddPostActivity"
             android:theme="@style/Theme.ClassTwo.NoAction" />
@@ -40,9 +41,8 @@
             android:name=".ui.userAccount.UserAccountActivity"
             android:theme="@style/Theme.ClassTwo.NoAction" />
 
-
         <provider
-            android:name="com.thesaugat.instafeed.utils.FileProvider"
+            android:name=".utils.FileProvider"
             android:authorities="${applicationId}.provider"
             android:exported="false"
             android:grantUriPermissions="true">
@@ -51,6 +51,5 @@
                 android:resource="@xml/provider_paths" />
         </provider>
     </application>
-
 
 </manifest>
